[project]
name = "esrapgra"
version = "0.1.1"
authors = [
  { name="Austin Davis-Richardson", email="hello@agdr.org" },
]
description = "The opposite of Argparse"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/audy/esrapgra"
"Bug Tracker" = "https://github.com/audy/esrapgra/issues"
